# XSD-CMake-Example

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindXSD.cmake
src/: CMakeLists.txt  main.cpp
xsd/: library.xml
